add charcoal page

--- a/pages/charcoal/coco.html
+++ b/pages/charcoal/coco.html
@@ -218,12 +218,137 @@
 
     <!-- Main Content -->
     <main class="main mt-5">
-      <section class="under-construction d-flex justify-content-center align-items-center">
-        <div class="text-center">
-          <img src="../../assets/img/underConstruction.png" alt="Under Construction" class="img-fluid mb-4">
-          <h1 class="display-4">This Page is Under Construction</h1>
-          <p class="lead">We are working hard to bring you the best experience. Please check back later.</p>
+
+      <!-- Section 1: Header Image with Title and Description -->
+      <section id="header-image" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="card background-image"><img src="../../assets/img/products/wood-charcoal2.jpg" alt="Coco Charcoal"></div>
+        <div class="card-img-overlay">
+          <div class="container">
+            <h1 class="product-header-title" data-aos="fade-up" data-aos-duration="1000">Coco <strong class="text-strong">Charcoal</strong></h1>
+            <p class="product-description" data-aos="fade-up" data-aos-duration="1500">
+              Coconut charcoal is a natural, eco-friendly product made from the husks of coconuts. Known for its high carbon content, it burns hotter and longer than traditional charcoal, making it an excellent choice for barbecues and grilling.
+            </p>
+
+          </div>
         </div>
+
+      </section>
+
+      <!-- Section 2: Product Description with Image -->
+      <section id="product-detail" class="product-detail d-flex align-items-center">
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+              <!-- Product Image -->
+              <div class="col-lg-12 img-box-2">
+                <img src="../../assets/img/products/wood-charcoal.jpg" alt="Coco Charcoal" class="product-img-2">
+              </div>
+              <!-- Product Description -->
+              <div class="col-lg-12 py-3">
+                  <h2 class="product-title text-center">Coco Charcoal</h2>
+              </div>
+
+              <div class="col-lg-6 py-3">
+                <p class="product-text">
+                  Its low smoke output and minimal ash production ensure a cleaner cooking experience. Additionally, coconut charcoal is often used in water filtration and air purification due to its porous structure, which effectively absorbs impurities. With its sustainable sourcing and versatile applications, coconut charcoal is a popular choice for both culinary and eco-conscious uses.
+                  <p>
+                    Coconut charcoal, specifically activated coconut charcoal, is produced by carbonizing the husks of coconuts at high temperatures. This process creates a highly porous structure, giving it a large surface area that enhances its absorption properties. 
+                  </p>
+
+                </p>
+                <p class="product-text mt-4">
+                  In culinary applications, coconut charcoal is prized for its ability to burn at high temperatures (up to 800°F or 427°C) with minimal smoke and odor, making it ideal for grilling and barbecuing. It typically produces less ash than hardwood charcoals, ensuring easier cleanup.
+                </p>
+              </div>
+
+              <div class="col-lg-6 img-box-3">
+                <img src="../../assets/img/products/wood-bbq.jpg" alt="Coco Charcoal" class="product-img-2">
+              </div>
+
+              <div class="col-lg-12 py-3">
+                <p class="product-text mt-4 text-center">
+                  Beyond cooking, activated coconut charcoal is commonly used in air and water purification systems. Its absorbent qualities make it effective at trapping toxins, chemicals, and odors, promoting a healthier environment. 
+                </p>
+                <p class="product-text mt-4 text-center">
+                  Sustainable and renewable, coconut charcoal not only delivers superior performance in both culinary and filtration contexts but also supports environmentally friendly practices by utilizing a waste product from coconut processing.
+                </p>
+              </div>
+
+          </div>
+        </div>
+      </section>
+
+      <!-- Section 3: Product Features and Details -->
+      <section id="product-features" class="container-fluid">
+
+        <!-- Subsection 1: Key Benefit -->
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 fetures-section justify-content-center">
+            <h2 class="features-title text-center" data-aos="fade-up">Key Benefits</h2>
+
+            <div class="col-lg-12 img-box-2">
+              <img src="../../assets/img/products/wood-burn.jpg" alt="Coco Charcoal Burning" class="product-img-2">
+            </div>
+
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-thermometer-high"></i>
+              </div>
+              <h3 class="features-benefit-title">High Heat Output</h3>
+              <p>It burns hotter and longer than traditional charcoal, making it excellent for grilling and barbecuing.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-cloud"></i>
+              </div>
+              <h3 class="features-benefit-title">Low Smoke Emission</h3>
+              <p>Coconut charcoal produces minimal smoke, which results in a cleaner cooking experience and less impact on the environment.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-bucket-fill"></i>
+              </div>
+              <h3 class="features-benefit-title">Minimal Ash Production</h3>
+              <p>It generates very little ash compared to other charcoals, making cleanup easier after cooking.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-tree"></i>
+              </div>
+              <h3 class="features-benefit-title">Sustainable Sourcing</h3>
+              <p>Made from coconut husks, it utilizes a waste product from coconut processing, promoting sustainability and reducing waste.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-droplet"></i>
+              </div>
+              <h3 class="features-benefit-title">Flavor Neutral</h3>
+              <p>Coconut charcoal imparts no unwanted flavors to food, allowing the natural taste of the ingredients to shine.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-shield-fill-check"></i>
+              </div>
+              <h3 class="features-benefit-title">Activated Charcoal Benefit</h3>
+              <p>When activated, coconut charcoal is highly porous, making it effective for adsorbing toxins and impurities, which is why it’s used in water filtration and air purification.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-recycle"></i>
+              </div>
+              <h3 class="features-benefit-title">Eco-Friendly</h3>
+              <p>Being derived from renewable resources, it has a lower carbon footprint compared to fossil fuels and non-renewable charcoal sources.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-grid-fill"></i>
+              </div>
+              <h3 class="features-benefit-title">Versatile Appications</h3>
+              <p>Beyond grilling, coconut charcoal is used in various industries, including cosmetics, medicine, and filtration systems.</p>
+            </div>
+
+          </div>
+        </div>
+
       </section>
 
     </main>
