--- a/pages/charcoal/wood.html
+++ b/pages/charcoal/wood.html
@@ -218,12 +218,124 @@
 
     <!-- Main Content -->
     <main class="main mt-5">
-      <section class="under-construction d-flex justify-content-center align-items-center">
-        <div class="text-center">
-          <img src="../../assets/img/underConstruction.png" alt="Under Construction" class="img-fluid mb-4">
-          <h1 class="display-4">This Page is Under Construction</h1>
-          <p class="lead">We are working hard to bring you the best experience. Please check back later.</p>
+
+      <!-- Section 1: Header Image with Title and Description -->
+      <section id="header-image" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="card background-image"><img src="../../assets/img/products/wood-charcoal2.jpg" alt="Wood Charcoal"></div>
+        <div class="card-img-overlay">
+          <div class="container">
+            <h1 class="product-header-title" data-aos="fade-up" data-aos-duration="1000">Wood <strong class="text-strong">Charcoal</strong></h1>
+            <p class="product-description" data-aos="fade-up" data-aos-duration="1500">
+              Wood charcoal is a black, porous substance created by heating wood in the absence of oxygen, a process known as pyrolysis. This results in the removal of moisture and volatile compounds, leaving behind a lightweight, carbon-rich material. 
+            </p>
+
+          </div>
         </div>
+
+      </section>
+
+      <!-- Section 2: Product Description with Image -->
+      <section id="product-detail" class="product-detail d-flex align-items-center">
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+              <!-- Product Image -->
+              <div class="col-lg-12 img-box-2">
+                <img src="../../assets/img/products/wood-charcoal.jpg" alt="Wood Charcoal" class="product-img-2">
+              </div>
+              <!-- Product Description -->
+              <div class="col-lg-12 py-3">
+                  <h2 class="product-title text-center">Wood Charcoal</h2>
+              </div>
+
+              <div class="col-lg-6 py-3">
+                <p class="product-text">
+                  Ideal for grilling and barbecuing, wood charcoal burns at high temperatures and imparts a distinct smoky flavor to food, enhancing the overall culinary experience. It produces a moderate amount of ash, which can be easily managed during cooking. Different types of wood, such as hickory, mesquite, or applewood, can create unique flavors, allowing for customization based on personal preference.
+                </p>
+                <p class="product-text mt-4">
+                  In addition to cooking, wood charcoal has applications in art, metallurgy, and even medicine, where it is used as an adsorbent to trap toxins. While it is a traditional choice for grilling enthusiasts, sustainable sourcing and proper management of wood resources are essential to minimize environmental impact. Overall, wood charcoal combines performance with flavor, making it a staple for outdoor cooking.
+                </p>
+              </div>
+
+              <div class="col-lg-6 img-box-3">
+                <img src="../../assets/img/products/wood-bbq.jpg" alt="Wood Charcoal BBQ" class="product-img-2">
+              </div>
+
+          </div>
+        </div>
+      </section>
+
+      <!-- Section 3: Product Features and Details -->
+      <section id="product-features" class="container-fluid">
+
+        <!-- Subsection 1: Key Benefit -->
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 fetures-section justify-content-center">
+            <h2 class="features-title text-center" data-aos="fade-up">Key Benefits</h2>
+
+            <div class="col-lg-12 img-box-2">
+              <img src="../../assets/img/products/wood-burn.jpg" alt="Wood Charcoal Burning" class="product-img-2">
+            </div>
+
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-fire"></i>
+              </div>
+              <h3 class="features-benefit-title">High Heat Output</h3>
+              <p>It burns at higher temperatures than many other fuels, making it ideal for grilling and searing meats.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-droplet-half"></i>
+              </div>
+              <h3 class="features-benefit-title">Flavor Enhancement</h3>
+              <p>Different types of wood impart unique flavors to food, adding depth and complexity to grilled dishes.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-tools"></i>
+              </div>
+              <h3 class="features-benefit-title">Versatility</h3>
+              <p>Wood charcoal can be used for various cooking methods, including grilling, smoking, and barbecuing.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-tree"></i>
+              </div>
+              <h3 class="features-benefit-title">Natural Ingredients</h3>
+              <p>Typically made from pure wood, it contains no additives or chemicals, making it a more natural choice for outdoor cooking.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-cloud"></i>
+              </div>
+              <h3 class="features-benefit-title">Lower Smoke Production</h3>
+              <p>Compared to some other fuels, high-quality wood charcoal produces less smoke, creating a cleaner cooking experience.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-recycle"></i>
+              </div>
+              <h3 class="features-benefit-title">Eco-Friendly Option</h3>
+              <p>When sourced sustainably, wood charcoal can be a renewable resource, especially if made from byproducts of the timber industry.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-lightning-fill"></i>
+              </div>
+              <h3 class="features-benefit-title">Easy to Light</h3>
+              <p>Many wood charcoals are easy to ignite, especially lump charcoal, which lights quickly and doesn’t require lighter fluid.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-shield"></i>
+              </div>
+              <h3 class="features-benefit-title">Good Ash Management</h3>
+              <p>It generally produces manageable ash that can be easily disposed of or used as a soil amendment.</p>
+            </div>
+
+          </div>
+        </div>
+
       </section>
 
     </main>
