Improved social project display code

--- a/index.html
+++ b/index.html
@@ -369,10 +369,18 @@
             <!-- image Card -->
             <div class="col-lg-6">
               <a href="#" class="btn btn-discover mb-3">Discover More</a>
-              <div class="masonry-grid">
-                <div class="grid-item"><img src="assets/img/hero1.jpg" alt="Project 1"></div>
-                <div class="grid-item"><img src="assets/img/hero2.jpg" alt="Project 2"></div>
-                <div class="grid-item"><img src="assets/img/hero3.jpg" alt="Project 3"></div>
+              <div id="masonry-grid" class="masonry-grid">
+                <div class="grid-container-discover">
+                  <div class="grid-item landscape" id="img1">
+                    <img src="assets/img/hero1.jpg" alt="Project 1" class="img-fluid">
+                  </div>
+                  <div class="grid-item landscape" id="img2">
+                    <img src="assets/img/hero2.jpg" alt="Project 2" class="img-fluid">
+                  </div>
+                  <div class="grid-item portrait" id="img3">
+                    <img src="assets/img/hero3.jpg" alt="Project 3" class="img-fluid">
+                  </div>
+                </div>
               </div>
             </div>
 
