--- a/about.html
+++ b/about.html
@@ -222,7 +222,7 @@
 
       <!-- Header Section -->
       <section id="header-section-image" class="d-flex flex-column justify-content-center align-items-center">
-        <div class="card background-section-image"><img src="../../assets/img/products/arenga.jpg" alt="Natural Arenga Sugar"></div>
+        <div class="card background-section-image"><img src="assets/img/products/arenga.jpg" alt="Natural Arenga Sugar"></div>
         <div class="card-img-overlay">
           <div class="container d-flex align-items-center">
             <div class="welcome d-lg-flex">
