--- a/about.html
+++ b/about.html
@@ -222,7 +222,7 @@
 
       <!-- Header Section -->
       <section id="header-section-image" class="d-flex flex-column justify-content-center align-items-center">
-        <div class="card background-section-image"><img src="../../assets/img/products/arenga.jpg" alt="Natural Arenga Sugar"></div>
+        <div class="card background-section-image"><img src="assets/img/products/arenga.jpg" alt="Natural Arenga Sugar"></div>
         <div class="card-img-overlay">
           <div class="container d-flex align-items-center">
             <div class="welcome d-lg-flex">
@@ -341,15 +341,6 @@
 
             <!-- About Us Content -->
             <div class="col-lg-6">
-              <p data-aos="fade-left" data-aos-duration="1000" class="about-text">
-                Our Internal Control System (ICS) is a set of policies and procedures that are designed to ensure that our products are produced in a safe and environmentally friendly manner. We have implemented a number of measures to ensure that our products meet the highest standards of quality and safety. Our ICS includes regular inspections of our facilities, testing of our products, and training of our employees. We are committed to providing our customers with the best coconut sugar products that are good for their health and the planet.
-              </p>
-              <p data-aos="fade-left" data-aos-duration="1000" class="about-text">
-                Our ICS is designed to ensure that our products are produced in a safe and environmentally friendly manner. We have implemented a number of measures to ensure that our products meet the highest standards of quality and safety. Our ICS includes regular inspections of our facilities, testing of our products, and training of our employees. We are committed to providing our customers with the best coconut sugar products that are good for their health and the planet.
-              </p>
-            </div>
-
-            <div class="col-lg-12">
               <p data-aos="fade-left" data-aos-duration="1000" class="about-text">
                 Our Internal Control System (ICS) is a set of policies and procedures that are designed to ensure that our products are produced in a safe and environmentally friendly manner. We have implemented a number of measures to ensure that our products meet the highest standards of quality and safety. Our ICS includes regular inspections of our facilities, testing of our products, and training of our employees. We are committed to providing our customers with the best coconut sugar products that are good for their health and the planet.
               </p>
